app-ingress.yaml
# Use to deploy load balancer and ingress services
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: streamlit-app-ip
  labels:
    app: hello
spec:
  defaultBackend:
    service:
      name: streamlit-app-service
      port:
        number: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: streamlit-app
  name: streamlit-app-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: streamlit-app
  type: NodePort
